--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="bottomleft">
             <p>
-            Tales of adventure, fantasy, science fiction, and more. An AI platform for writers. A community for fans.</p>
+            Tales of adventure, fantasy, science fiction, horror, and more. An AI platform for writers. A community for fans.</p>
         </div>
     </div>
     <div class="left">
